Fix jump target

--- a/resources/assets/less/bem/ranking-page.less
+++ b/resources/assets/less/bem/ranking-page.less
@@ -25,6 +25,6 @@
 
   &__jump-target {
     position: absolute;
-    top: -50px;
+    top: -100px;
   }
 }
